# computer-vision-projects

./: .gitignore  README.md
computer-vision-final/: zip_for_colab.py  zip_submission.py
hybrid-images-convolution/: cutoff_frequencies.txt  setup.cfg
hybrid-images-convolution/vision/: part1.py  part3.py  part4.py
image-processing-project/: README.md
image-processing-project/src/vision/: part3_pointnet.py
image-processing-project/tests/: test_part1.py  test_part2.py  test_part3.py  test_part5.py
neural-radiance-fields-nerf/: proj6_colab.ipynb
neural-radiance-fields-nerf/docs/: proj6_report.pptx  ~$proj6_report.pptx
pointnet-point-cloud-classification/: proj5.ipynb  setup.cfg
pointnet-point-cloud-classification/docs/: proj5_bell.pptx  proj5_report.pptx
pointnet-point-cloud-classification/src/vision/: part1_dataloader.py  part5_tnet.py  training.py  utils.py
pointnet-point-cloud-classification/tests/: model_test_utils.py
project-1-hybrid-images-convolution/: metadata.yml
project-1-hybrid-images-convolution/__MACOSX/vision/: .___pycache__
project-1-hybrid-images-convolution/vision/: part2_datasets.py  part2_models.py
project-2-sift-ransac-feature-matching/: metadata.yml
project-2-sift-ransac-feature-matching/src/vision/: part2_feature_matching.py  part3_sift_descriptor.py  part4_projection_matrix.py  utils.py
project-4-semantic-segmentation/src/vision/: part3_training_utils.py  part5_pspnet.py  part6_transfer_learning.py  trainer.py
project-5-pointnet-point-cloud-classification/: .zip_dir_list.yml  pyproject.toml
project-5-pointnet-point-cloud-classification/src/vision/: part2_baseline.py  part4_analysis.py
project-5-pointnet-point-cloud-classification/tests/: test_part4.py
project-6-neural-radiance-fields-nerf/: .colab_zip_dir_list.yml  .final_zip_dir_list.yml  README.md  pyproject.toml
project-6-neural-radiance-fields-nerf/docs/: proj6_bell.pptx
project-6-neural-radiance-fields-nerf/src/vision/: part1.py  part2.py  part3.py  utils.py
project-6-neural-radiance-fields-nerf/tests/: test_part1.py  test_part2.py
semantic-segmentation/: metadata.yml
semantic-segmentation/__MACOSX/exp/: ._kitti
semantic-segmentation/src/vision/: accuracy_calculator.py  avg_meter.py  cv2_transforms.py  part1_ppm.py  part2_dataset.py  part4_segmentation_net.py  test.py
sift-ransac-feature-matching/__MACOSX/: ._setup.cfg
sift-ransac-feature-matching/src/vision/: part1_harris_corner.py  part5_fundamental_matrix.py  part6_ransac.py
sift-ransac-feature-matching/src/vision.egg-info/: PKG-INFO
(+4 files in other folders)
