[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv_proj5"
version = "0.1.0"
description = "Computer Vision Project 5"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "imageio",
    "jupyter",
    "mypy",
    "pytest",
    "flake8",
    "bandit",
    "torch",
    "torchvision",
    "pillow",
    "opencv-python",
    "colour-science",
    "scipy",
    "pyyaml",
    "pandas",
    "gradescope-utils",
    "plotly",
    "tqdm",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/vision"]